--- a/skills.html
+++ b/skills.html
@@ -76,8 +76,85 @@
     <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
     <nav>
       <div id="menuDropdownWrapper">
-      <button id="menuToggle" aria-label="Open menu">
+      <button id="""menuToggle" aria-label="Open menu" style="display: none;">
         &#9776; Menu
+      </button>
+      <script>
+        // Show menu button only on mobile
+        function handleMenuToggleDisplay() {
+          const btn = document.getElementById('menuToggle');
+          if (window.innerWidth <= 768) {
+            btn.style.display = 'inline-flex';
+          } else {
+            btn.style.display = 'none';
+            document.getElementById('navMenu').style.display = '';
+          }
+        }
+        window.addEventListener('resize', handleMenuToggleDisplay);
+        window.addEventListener('DOMContentLoaded', handleMenuToggleDisplay);
+
+        // Toggle nav menu on mobile
+        document.addEventListener('DOMContentLoaded', function () {
+          const btn = document.getElementById('menuToggle');
+          const navMenu = document.getElementById('navMenu');
+          btn.addEventListener('click', function () {
+            if (navMenu.style.display === 'block') {
+              navMenu.style.display = 'none';
+            } else {
+              navMenu.style.display = 'block';
+            }
+          });
+        });
+      </script>
+      <style>
+        #menuToggle {
+          margin-right: 1rem;
+          padding: 0.5rem 1.2rem;
+          font-size: 1.1rem;
+          border: none;
+          border-radius: 0.38rem;
+          background: #1976d2;
+          color: #fff;
+          cursor: pointer;
+          box-shadow: 0 2px 8px rgba(25,118,210,0.10);
+          transition: background 0.2s;
+          align-items: center;
+          gap: 0.5rem;
+        }
+        @media (prefers-color-scheme: dark) {
+          #menuToggle {
+            background: #222e3a;
+            color: #fff;
+            box-shadow: 0 2px 8px rgba(25,118,210,0.20);
+          }
+        }
+        @media (max-width: 768px) {
+          #menuToggle {
+            display: inline-flex;
+          }
+          #navMenu {
+            display: none;
+            flex-direction: column;
+            background: #fff;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100vw;
+            z-index: 100;
+            box-shadow: 0 4px 16px rgba(25,118,210,0.08);
+          }
+          @media (prefers-color-scheme: dark) {
+            #navMenu {
+              background: #222e3a;
+            }
+          }
+          #navMenu li {
+            margin: 0.5rem 0;
+            text-align: left;
+            padding-left: 1.5rem;
+          }
+        }
+      </style>
       </button>
       <ul id="navMenu">
         <li class="section-menu"><a href="index.html">Home</a></li>
