--- a/skills.html
+++ b/skills.html
@@ -76,7 +76,7 @@
     <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
     <nav>
       <div id="menuDropdownWrapper">
-      <button id="""menuToggle" aria-label="Open menu" style="display: none;">
+      <button id="menuToggle" aria-label="Open menu" style="display: none;">
         &#9776; Menu
       </button>
       <script>
