--- a/skills.html
+++ b/skills.html
@@ -83,56 +83,88 @@
         // Show menu button only on mobile
         function handleMenuToggleDisplay() {
           const btn = document.getElementById('menuToggle');
-          if (window.innerWidth <= 768) {
+            const navMenu = document.getElementById('navMenu');
+            if (window.innerWidth <= 768) {
             btn.style.display = 'inline-flex';
-          } else {
+            navMenu.style.position = 'absolute';
+            navMenu.style.top = '100%';
+            navMenu.style.left = '0';
+            navMenu.style.width = '100vw';
+            navMenu.style.margin = '0';
+            // Prepare for animation
+            navMenu.style.overflow = 'hidden';
+            navMenu.style.transition = 'max-height 0.35s cubic-bezier(0.4,0,0.2,1)';
+            if (!navMenu.hasAttribute('data-initialized')) {
+              navMenu.style.maxHeight = '0';
+              navMenu.setAttribute('data-initialized', 'true');
+            }
+            } else {
             btn.style.display = 'none';
-            document.getElementById('navMenu').style.display = '';
+            navMenu.style.display = '';
+            navMenu.style.position = '';
+            navMenu.style.top = '';
+            navMenu.style.left = '';
+            navMenu.style.width = '';
+            navMenu.style.margin = '';
+            navMenu.style.maxHeight = '';
+            navMenu.style.overflow = '';
+            navMenu.style.transition = '';
+            navMenu.removeAttribute('data-initialized');
+            }
           }
-        }
-        window.addEventListener('resize', handleMenuToggleDisplay);
-        window.addEventListener('DOMContentLoaded', handleMenuToggleDisplay);
+          window.addEventListener('resize', handleMenuToggleDisplay);
+          window.addEventListener('DOMContentLoaded', handleMenuToggleDisplay);
 
-        // Toggle nav menu on mobile
-        document.addEventListener('DOMContentLoaded', function () {
-          const btn = document.getElementById('menuToggle');
-          const navMenu = document.getElementById('navMenu');
-          btn.addEventListener('click', function () {
-            if (navMenu.style.display === 'block') {
-              navMenu.style.display = 'none';
+          // Toggle nav menu on mobile with smooth dropdown
+          document.addEventListener('DOMContentLoaded', function () {
+            const btn = document.getElementById('menuToggle');
+            const navMenu = document.getElementById('navMenu');
+            btn.addEventListener('click', function () {
+            if (navMenu.style.maxHeight && navMenu.style.maxHeight !== '0px') {
+              navMenu.style.maxHeight = '0';
             } else {
               navMenu.style.display = 'block';
+              navMenu.style.maxHeight = navMenu.scrollHeight + 'px';
             }
+            });
+            // Hide menu after transition if closed
+            navMenu.addEventListener('transitionend', function () {
+            if (navMenu.style.maxHeight === '0px') {
+              navMenu.style.display = 'none';
+            }
+            });
           });
-        });
-      </script>
-      <style>
-        #menuToggle {
-          margin-right: 1rem;
-          padding: 0.5rem 1.2rem;
-          font-size: 1.1rem;
-          border: none;
-          border-radius: 0.38rem;
-          background: #1976d2;
-          color: #fff;
-          cursor: pointer;
-          box-shadow: 0 2px 8px rgba(25,118,210,0.10);
-          transition: background 0.2s;
-          align-items: center;
-          gap: 0.5rem;
-        }
-        @media (prefers-color-scheme: dark) {
+          </script>
+          <style>
+          #menuDropdownWrapper {
+            position: relative;
+          }
           #menuToggle {
+            margin-right: 1rem;
+            padding: 0.5rem 1.2rem;
+            font-size: 1.1rem;
+            border: none;
+            border-radius: 0.38rem;
+            background: #1976d2;
+            color: #fff;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(25,118,210,0.10);
+            transition: background 0.2s;
+            align-items: center;
+            gap: 0.5rem;
+          }
+          @media (prefers-color-scheme: dark) {
+            #menuToggle {
             background: #222e3a;
             color: #fff;
             box-shadow: 0 2px 8px rgba(25,118,210,0.20);
+            }
           }
-        }
-        @media (max-width: 768px) {
-          #menuToggle {
+          @media (max-width: 768px) {
+            #menuToggle {
             display: inline-flex;
-          }
-          #navMenu {
+            }
+            #navMenu {
             display: none;
             flex-direction: column;
             background: #fff;
@@ -142,19 +174,23 @@
             width: 100vw;
             z-index: 100;
             box-shadow: 0 4px 16px rgba(25,118,210,0.08);
-          }
-          @media (prefers-color-scheme: dark) {
+            margin: 0;
+            overflow: hidden;
+            max-height: 0;
+            transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1);
+            }
+            @media (prefers-color-scheme: dark) {
             #navMenu {
               background: #222e3a;
             }
-          }
-          #navMenu li {
+            }
+            #navMenu li {
             margin: 0.5rem 0;
             text-align: left;
             padding-left: 1.5rem;
+            }
           }
-        }
-      </style>
+          </style>
       </button>
       <ul id="navMenu">
         <li class="section-menu"><a href="index.html">Home</a></li>
