--- a/skills.html
+++ b/skills.html
@@ -76,180 +76,174 @@
     <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
     <nav>
       <div id="menuDropdownWrapper">
-      <button id="menuToggle" aria-label="Open menu" style="display: none;">
-        &#9776; Menu
-      </button>
-      <style>
-        #menuDropdownWrapper {
-          position: relative;
-          max-width: 100vw;
-          margin: 0 auto;
+        <button id="menuToggle" aria-label="Open menu" aria-expanded="false">
+          &#9776; Menu
+        </button>
+        <ul id="navMenu">
+          <li class="section-menu"><a href="index.html">Home</a></li>
+          <li class="section-menu active"><a href="skills.html">Skills</a></li>
+          <li class="section-menu"><a href="projects.html">Projects</a></li>
+          <li class="section-menu"><a href="experience.html">Job Experience</a></li>
+          <li class="section-menu"><a href="education.html">Education</a></li>
+          <li class="section-menu"><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <script>
+      // Mobile dropdown menu logic
+      const menuToggle = document.getElementById('menuToggle');
+      const navMenu = document.getElementById('navMenu');
+
+      function closeMenuOnResize() {
+        if (window.innerWidth > 768) {
+          navMenu.classList.remove('open');
+          menuToggle.setAttribute('aria-expanded', 'false');
+        }
+      }
+
+      menuToggle.addEventListener('click', function () {
+        const isOpen = navMenu.classList.toggle('open');
+        menuToggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+      });
+
+      window.addEventListener('resize', closeMenuOnResize);
+
+      // Optional: close menu when clicking outside
+      document.addEventListener('click', function (e) {
+        if (
+          window.innerWidth <= 768 &&
+          !menuToggle.contains(e.target) &&
+          !navMenu.contains(e.target)
+        ) {
+          navMenu.classList.remove('open');
+          menuToggle.setAttribute('aria-expanded', 'false');
+        }
+      });
+    </script>
+    <style>
+      nav {
+        width: 100%;
+        margin-bottom: 1.5rem;
+      }
+      #menuDropdownWrapper {
+        position: relative;
+        width: 100%;
+        max-width: 100vw;
+      }
+      #menuToggle {
+        display: none;
+        background: #1976d2;
+        color: #fff;
+        border: none;
+        padding: 0.7rem 1.2rem;
+        font-size: 1.2rem;
+        border-radius: 0.38rem;
+        cursor: pointer;
+        margin: 0.5rem 0;
+        transition: background 0.2s;
+        font-family: inherit;
+        z-index: 1100;
+      }
+      #navMenu {
+        display: flex;
+        gap: 1.5rem;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        margin: 0;
+        padding: 0.5rem 0;
+        background: transparent;
+        transition: none;
+      }
+      #navMenu li a {
+        color: #1976d2;
+        text-decoration: none;
+        font-weight: 500;
+        padding: 0.4rem 0.8rem;
+        border-radius: 0.3rem;
+        transition: background 0.18s, color 0.18s;
+      }
+      #navMenu li.active a,
+      #navMenu li a:hover {
+        background: #1976d2;
+        color: #fff;
+      }
+
+      /* Mobile styles */
+      @media (max-width: 768px) {
+        #menuToggle {
+          display: block;
           width: 100%;
-          display: flex;
-          justify-content: center;
-            flex-direction: column;
-            align-items: center;
-            gap: 0; /* Remove spacing between button and dropdown */
-          }
-          #menuToggle {
-            margin-right: 0;
-            padding: 0.5rem 1.2rem;
-            font-size: 1.1rem;
-            border: none;
-            border-radius: 0.38rem 0.38rem 0 0;
-            background: #1976d2;
-            color: #fff;
-            cursor: pointer;
-            box-shadow: 0 2px 8px rgba(25,118,210,0.10);
-            transition: background 0.2s;
-            align-items: center;
-            gap: 0.5rem;
-            width: 70vw;
-            max-width: 70vw;
-            display: none;
-            margin-top: 1.2rem; /* Add padding at the top */
-          }
-          @media (prefers-color-scheme: dark) {
-            #menuToggle {
-          background: #222e3a;
-          color: #fff;
-          box-shadow: 0 2px 8px rgba(25,118,210,0.20);
-            }
-          }
-          @media (max-width: 768px) {
-            #menuDropdownWrapper {
-          align-items: center; /* Center both button and dropdown */
-          gap: 0; /* Remove spacing between button and dropdown */
-            }
-            #menuToggle {
-          display: inline-flex;
-          width: 70vw !important;
-          max-width: 70vw !important;
-          border-radius: 0.38rem 0.38rem 0 0;
-          margin-top: 1.2rem; /* Ensure padding at the top on mobile */
-          margin-left: 0; /* Align with dropdown */
-            }
-            #navMenu {
-          display: none;
-          flex-direction: column;
-          background: #fff;
+          text-align: left;
+        }
+        #navMenu {
           position: absolute;
-          top: calc(100% + 8px); /* Add spacing at the top */
+          top: 110%;
           left: 0;
-          width: 70vw !important;
-          max-width: 70vw !important;
-          z-index: 100;
-          box-shadow: 0 4px 16px rgba(25,118,210,0.08);
-          margin: 0;
+          right: 0;
+          background: #fff;
+          box-shadow: 0 8px 24px rgba(25, 118, 210, 0.10);
+          border-radius: 0.5rem;
+          flex-direction: column;
+          align-items: stretch;
+          gap: 0;
           overflow: hidden;
           max-height: 0;
-          transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1);
-          border-radius: 0 0 0.38rem 0.38rem;
-          border: 1.5px solid #1976d2;
-          border-top: none;
-          left: 0; /* Align dropdown with button */
-            }
-            @media (prefers-color-scheme: dark) {
-          #navMenu {
-            background: #222e3a;
-            border-color: #3a4a5a;
-          }
-            }
-            #navMenu li {
-          margin: 0.5rem 0;
-          text-align: left;
-          padding-left: 1.5rem;
-            }
-          }
-          </style>
-          <script>
-          // Show menu button only on mobile
-          document.addEventListener('DOMContentLoaded', function () {
-            const btn = document.getElementById('menuToggle');
-            const navMenu = document.getElementById('navMenu');
-            function setMenuWidths() {
-          if (window.innerWidth <= 768) {
-            // Set both button and menu to 70% of screen width
-            const targetWidth = Math.round(window.innerWidth * 0.7) + 'px';
-            btn.style.width = targetWidth;
-            navMenu.style.width = targetWidth;
-          } else {
-            btn.style.width = '';
-            navMenu.style.width = '';
-          }
-            }
-            function handleMenuToggleDisplay() {
-          if (window.innerWidth <= 768) {
-            btn.style.display = 'inline-flex';
-            navMenu.style.position = 'absolute';
-            navMenu.style.top = 'calc(100% + 8px)'; // Add spacing at the top
-            navMenu.style.left = '0';
-            navMenu.style.margin = '0';
-            navMenu.style.overflow = 'hidden';
-            navMenu.style.transition = 'max-height 0.35s cubic-bezier(0.4,0,0.2,1)';
-            navMenu.style.border = '1.5px solid #1976d2';
-            navMenu.style.borderTop = 'none';
-            navMenu.style.borderRadius = '0 0 0.38rem 0.38rem';
-            if (!navMenu.hasAttribute('data-initialized')) {
-            navMenu.style.maxHeight = '0';
-            navMenu.setAttribute('data-initialized', 'true');
-            }
-            setMenuWidths();
-          } else {
-            btn.style.display = 'none';
-            navMenu.style.display = '';
-            navMenu.style.position = '';
-            navMenu.style.top = '';
-            navMenu.style.left = '';
-            navMenu.style.width = '';
-            navMenu.style.margin = '';
-            navMenu.style.maxHeight = '';
-            navMenu.style.overflow = '';
-            navMenu.style.transition = '';
-            navMenu.style.border = '';
-            navMenu.style.borderTop = '';
-            navMenu.style.borderRadius = '';
-            navMenu.removeAttribute('data-initialized');
-            btn.style.width = '';
-          }
-            }
-            handleMenuToggleDisplay();
-            setMenuWidths();
-            window.addEventListener('resize', function() {
-          handleMenuToggleDisplay();
-          setMenuWidths();
-            });
+          opacity: 0;
+          pointer-events: none;
+          transition: max-height 0.35s cubic-bezier(.4,0,.2,1), opacity 0.25s;
+          z-index: 1001;
+        }
+        #navMenu.open {
+          max-height: 500px;
+          opacity: 1;
+          pointer-events: auto;
+          transition: max-height 0.45s cubic-bezier(.4,0,.2,1), opacity 0.25s;
+        }
+        #navMenu li {
+          border-bottom: 1px solid #e3e3e3;
+        }
+        #navMenu li:last-child {
+          border-bottom: none;
+        }
+        #navMenu li a {
+          display: block;
+          padding: 1rem 1.5rem;
+          color: #1976d2;
+          background: transparent;
+          border-radius: 0;
+          font-size: 1.08rem;
+        }
+        #navMenu li.active a,
+        #navMenu li a:hover {
+          background: #1976d2;
+          color: #fff;
+        }
+      }
 
-            // Toggle nav menu on mobile with smooth dropdown
-            btn.addEventListener('click', function () {
-          if (navMenu.style.maxHeight && navMenu.style.maxHeight !== '0px') {
-            navMenu.style.maxHeight = '0';
-          } else {
-            navMenu.style.display = 'block';
-            navMenu.style.maxHeight = navMenu.scrollHeight + 'px';
-          }
-            });
-            // Hide menu after transition if closed
-            navMenu.addEventListener('transitionend', function () {
-          if (navMenu.style.maxHeight === '0px') {
-            navMenu.style.display = 'none';
-          }
-            });
-          });
-          </script>
-      <ul id="navMenu">
-        <li class="section-menu"><a href="index.html">Home</a></li>
-        <li class="section-menu active"><a href="skills.html">Skills</a></li>
-        <li class="section-menu"><a href="projects.html">Projects</a></li>
-        <li class="section-menu"><a href="experience.html">Job Experience</a></li>
-        <li class="section-menu"><a href="education.html">Education</a></li>
-        <li class="section-menu"><a href="#contact">Contact</a></li>
-      </ul>
-      </div>
-        </nav>
-
-        
-  </header>
+      /* Dark mode support */
+      @media (prefers-color-scheme: dark) {
+        #menuToggle {
+          background: #222e3a;
+          color: #fff;
+        }
+        #navMenu {
+          background: #23272f;
+          box-shadow: 0 8px 24px rgba(25, 118, 210, 0.18);
+        }
+        #navMenu li {
+          border-bottom: 1px solid #333a45;
+        }
+        #navMenu li a {
+          color: #90caf9;
+        }
+        #navMenu li.active a,
+        #navMenu li a:hover {
+          background: #1976d2;
+          color: #fff;
+        }
+      }
+    </style>
 
   <section id="skills">
     <h2 class="section-title">Skills</h2>
