--- a/skills.html
+++ b/skills.html
@@ -76,7 +76,7 @@
     <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
     <nav>
       <div id="menuDropdownWrapper">
-        <button id="menuToggle" aria-label="Open menu" aria-expanded="false">
+        <button id="menuToggle" aria-label="Open menu" tabindex="0"></button>
           &#9776; Menu
         </button>
         <ul id="navMenu">
@@ -89,161 +89,117 @@
         </ul>
       </div>
     </nav>
-    <script>
-      // Mobile dropdown menu logic
-      const menuToggle = document.getElementById('menuToggle');
-      const navMenu = document.getElementById('navMenu');
-
-      function closeMenuOnResize() {
-        if (window.innerWidth > 768) {
-          navMenu.classList.remove('open');
-          menuToggle.setAttribute('aria-expanded', 'false');
-        }
-      }
-
-      menuToggle.addEventListener('click', function () {
-        const isOpen = navMenu.classList.toggle('open');
-        menuToggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
-      });
-
-      window.addEventListener('resize', closeMenuOnResize);
-
-      // Optional: close menu when clicking outside
-      document.addEventListener('click', function (e) {
-        if (
-          window.innerWidth <= 768 &&
-          !menuToggle.contains(e.target) &&
-          !navMenu.contains(e.target)
-        ) {
-          navMenu.classList.remove('open');
-          menuToggle.setAttribute('aria-expanded', 'false');
-        }
-      });
-    </script>
     <style>
-      nav {
-        width: 100%;
-        margin-bottom: 1.5rem;
-      }
-      #menuDropdownWrapper {
-        position: relative;
-        width: 100%;
-        max-width: 100vw;
-      }
-      #menuToggle {
-        display: none;
-        background: #1976d2;
-        color: #fff;
-        border: none;
-        padding: 0.7rem 1.2rem;
-        font-size: 1.2rem;
-        border-radius: 0.38rem;
-        cursor: pointer;
-        margin: 0.5rem 0;
-        transition: background 0.2s;
-        font-family: inherit;
-        z-index: 1100;
-      }
-      #navMenu {
-        display: flex;
-        gap: 1.5rem;
-        justify-content: center;
-        align-items: center;
-        list-style: none;
-        margin: 0;
-        padding: 0.5rem 0;
-        background: transparent;
-        transition: none;
-      }
-      #navMenu li a {
-        color: #1976d2;
-        text-decoration: none;
-        font-weight: 500;
-        padding: 0.4rem 0.8rem;
-        border-radius: 0.3rem;
-        transition: background 0.18s, color 0.18s;
-      }
-      #navMenu li.active a,
-      #navMenu li a:hover {
-        background: #1976d2;
-        color: #fff;
-      }
-
-      /* Mobile styles */
-      @media (max-width: 768px) {
+      @media (max-width: 800px) {
+        #menuDropdownWrapper {
+          position: relative;
+        }
         #menuToggle {
           display: block;
-          width: 100%;
-          text-align: left;
+          background: #1976d2;
+          color: #fff;
+          border: none;
+          padding: 0.7rem 1.2rem;
+          font-size: 1.2rem;
+          border-radius: 0.4rem;
+          cursor: pointer;
+          margin-bottom: 0.5rem;
+          z-index: 1101;
         }
         #navMenu {
+          display: none;
+          flex-direction: column;
           position: absolute;
           top: 110%;
           left: 0;
           right: 0;
           background: #fff;
-          box-shadow: 0 8px 24px rgba(25, 118, 210, 0.10);
+          box-shadow: 0 8px 24px rgba(25,118,210,0.13);
           border-radius: 0.5rem;
-          flex-direction: column;
-          align-items: stretch;
-          gap: 0;
-          overflow: hidden;
-          max-height: 0;
-          opacity: 0;
-          pointer-events: none;
-          transition: max-height 0.35s cubic-bezier(.4,0,.2,1), opacity 0.25s;
-          z-index: 1001;
+          z-index: 1100;
+          padding: 0.5rem 0;
+          animation: fadeInMenu 0.22s;
         }
-        #navMenu.open {
-          max-height: 500px;
-          opacity: 1;
-          pointer-events: auto;
-          transition: max-height 0.45s cubic-bezier(.4,0,.2,1), opacity 0.25s;
+        #navMenu.show {
+          display: flex;
         }
         #navMenu li {
+          margin: 0;
+          padding: 0.7rem 1.5rem;
           border-bottom: 1px solid #e3e3e3;
         }
         #navMenu li:last-child {
           border-bottom: none;
         }
-        #navMenu li a {
-          display: block;
-          padding: 1rem 1.5rem;
+        #navMenu a {
           color: #1976d2;
-          background: transparent;
-          border-radius: 0;
-          font-size: 1.08rem;
+          text-decoration: none;
+          font-size: 1.1rem;
+          display: block;
         }
-        #navMenu li.active a,
-        #navMenu li a:hover {
-          background: #1976d2;
-          color: #fff;
+        #navMenu .active a {
+          font-weight: bold;
+          color: #0d47a1;
+        }
+        @keyframes fadeInMenu {
+          from { opacity: 0; transform: translateY(-10px);}
+          to { opacity: 1; transform: translateY(0);}
         }
       }
-
-      /* Dark mode support */
-      @media (prefers-color-scheme: dark) {
+      @media (min-width: 801px) {
         #menuToggle {
-          background: #222e3a;
-          color: #fff;
+          display: none;
         }
         #navMenu {
-          background: #23272f;
-          box-shadow: 0 8px 24px rgba(25, 118, 210, 0.18);
+          display: flex !important;
+          position: static;
+          flex-direction: row;
+          background: none;
+          box-shadow: none;
+          border-radius: 0;
+          padding: 0;
         }
         #navMenu li {
-          border-bottom: 1px solid #333a45;
+          padding: 0 1.1rem;
+          border: none;
         }
-        #navMenu li a {
-          color: #90caf9;
-        }
-        #navMenu li.active a,
-        #navMenu li a:hover {
-          background: #1976d2;
-          color: #fff;
+        #navMenu a {
+          color: #1976d2;
+          font-size: 1.05rem;
         }
       }
     </style>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const menuToggle = document.getElementById('menuToggle');
+        const navMenu = document.getElementById('navMenu');
+        // Toggle menu on click
+        menuToggle.addEventListener('click', function (e) {
+          navMenu.classList.toggle('show');
+        });
+        // Close menu when clicking outside
+        document.addEventListener('click', function (e) {
+          if (
+            window.innerWidth <= 800 &&
+            !menuToggle.contains(e.target) &&
+            !navMenu.contains(e.target)
+          ) {
+            navMenu.classList.remove('show');
+          }
+        });
+        // Close menu on link click (mobile)
+        navMenu.querySelectorAll('a').forEach(function(link) {
+          link.addEventListener('click', function() {
+            if(window.innerWidth <= 800) navMenu.classList.remove('show');
+          });
+        });
+        // Keyboard accessibility: close on Escape
+        document.addEventListener('keydown', function(e) {
+          if (e.key === 'Escape') navMenu.classList.remove('show');
+        });
+      });
+    </script>
+  </header>
 
   <section id="skills">
     <h2 class="section-title">Skills</h2>
