--- a/skills.html
+++ b/skills.html
@@ -93,9 +93,12 @@
       @media (max-width: 800px) {
         #menuDropdownWrapper {
           position: relative;
+          max-width: 320px;
+          margin: 0 auto;
         }
         #menuToggle {
           display: block;
+          width: 100%;
           background: #1976d2;
           color: #fff;
           border: none;
@@ -105,6 +108,12 @@
           cursor: pointer;
           margin-bottom: 0.5rem;
           z-index: 1101;
+          transition: background 0.2s;
+          box-sizing: border-box;
+        }
+        #menuToggle:active,
+        #menuToggle:focus {
+          background: #0d47a1;
         }
         #navMenu {
           display: none;
@@ -113,33 +122,42 @@
           top: 110%;
           left: 0;
           right: 0;
-          background: #fff;
+          background: #1976d2;
           box-shadow: 0 8px 24px rgba(25,118,210,0.13);
           border-radius: 0.5rem;
           z-index: 1100;
-          padding: 0.5rem 0;
+          padding: 0.3rem 0;
           animation: fadeInMenu 0.22s;
+          max-width: 320px;
+          min-width: 180px;
         }
         #navMenu.show {
           display: flex;
         }
         #navMenu li {
           margin: 0;
-          padding: 0.7rem 1.5rem;
-          border-bottom: 1px solid #e3e3e3;
+          padding: 0.5rem 1.2rem;
+          border-bottom: 1px solid #1565c0;
         }
         #navMenu li:last-child {
           border-bottom: none;
         }
         #navMenu a {
-          color: #1976d2;
+          color: #fff;
           text-decoration: none;
-          font-size: 1.1rem;
+          font-size: 1.05rem;
           display: block;
+          transition: color 0.2s, background 0.2s;
+        }
+        #navMenu a:hover,
+        #navMenu a:focus {
+          background: #1565c0;
+          color: #fff;
         }
         #navMenu .active a {
           font-weight: bold;
-          color: #0d47a1;
+          background: #0d47a1;
+          color: #fff;
         }
         @keyframes fadeInMenu {
           from { opacity: 0; transform: translateY(-10px);}
@@ -158,6 +176,7 @@
           box-shadow: none;
           border-radius: 0;
           padding: 0;
+          max-width: none;
         }
         #navMenu li {
           padding: 0 1.1rem;
@@ -166,6 +185,20 @@
         #navMenu a {
           color: #1976d2;
           font-size: 1.05rem;
+          text-decoration: none;
+          transition: color 0.2s, background 0.2s;
+        }
+        #navMenu a:hover,
+        #navMenu a:focus {
+          color: #0d47a1;
+          background: #e3f2fd;
+          border-radius: 0.3rem;
+        }
+        #navMenu .active a {
+          font-weight: bold;
+          color: #0d47a1;
+          background: #bbdefb;
+          border-radius: 0.3rem;
         }
       }
     </style>
