--- a/skills.html
+++ b/skills.html
@@ -80,12 +80,12 @@
           &#9776; Menu
         </button>
         <ul id="navMenu">
-          <li class="section-menu"><a href="index.html">Home</a></li>
-          <li class="section-menu active"><a href="skills.html">Skills</a></li>
-          <li class="section-menu"><a href="projects.html">Projects</a></li>
-          <li class="section-menu"><a href="experience.html">Job Experience</a></li>
-          <li class="section-menu"><a href="education.html">Education</a></li>
-          <li class="section-menu"><a href="#contact">Contact</a></li>
+          <li class="section-menu"><a href="index.html"><span>Home</span></a></li>
+          <li class="section-menu active"><a href="skills.html"><span>Skills</span></a></li>
+          <li class="section-menu"><a href="projects.html"><span>Projects</span></a></li>
+          <li class="section-menu"><a href="experience.html"><span>Job Experience</span></a></li>
+          <li class="section-menu"><a href="education.html"><span>Education</span></a></li>
+          <li class="section-menu"><a href="#contact"><span>Contact</span></a></li>
         </ul>
       </div>
     </nav>
@@ -99,7 +99,7 @@
         #menuToggle {
           display: block;
           width: 100%;
-          background: #1976d2;
+          background: #007bff;
           color: #fff;
           border: none;
           padding: 0.7rem 1.2rem;
@@ -113,7 +113,7 @@
         }
         #menuToggle:active,
         #menuToggle:focus {
-          background: #0d47a1;
+          background: #0056b3;
         }
         #navMenu {
           display: none;
@@ -126,17 +126,17 @@
           box-shadow: 0 8px 24px rgba(25,118,210,0.13);
           border-radius: 0.5rem;
           z-index: 1100;
-          padding: 0.3rem 0;
+          padding: 0.2rem 0;
           animation: fadeInMenu 0.22s;
-          max-width: 320px;
-          min-width: 180px;
+          max-width: 220px;
+          min-width: 140px;
         }
         #navMenu.show {
           display: flex;
         }
         #navMenu li {
           margin: 0;
-          padding: 0.5rem 1.2rem;
+          padding: 0;
           border-bottom: 1px solid #e3f2fd;
         }
         #navMenu li:last-child {
@@ -147,7 +147,10 @@
           text-decoration: none;
           font-size: 1.05rem;
           display: block;
+          width: 100%;
+          padding: 0.6rem 1rem;
           transition: color 0.2s, background 0.2s;
+          cursor: pointer;
         }
         #navMenu a:hover,
         #navMenu a:focus {
@@ -164,6 +167,14 @@
           to { opacity: 1; transform: translateY(0);}
         }
         @media (prefers-color-scheme: dark) {
+          #menuToggle {
+            background: lightgrey;
+            color: #23272f;
+          }
+          #menuToggle:active,
+          #menuToggle:focus {
+            background: #b0b0b0;
+          }
           #navMenu {
             background: #23272f;
             box-shadow: 0 8px 24px rgba(30,30,30,0.13);
@@ -246,6 +257,15 @@
         menuToggle.addEventListener('click', function (e) {
           navMenu.classList.toggle('show');
         });
+        // Make the whole li clickable (mobile)
+        if(window.innerWidth <= 800) {
+          navMenu.querySelectorAll('li').forEach(function(li) {
+            li.addEventListener('click', function(e) {
+              const link = li.querySelector('a');
+              if(link) link.click();
+            });
+          });
+        }
         // Close menu when clicking outside
         document.addEventListener('click', function (e) {
           if (
