--- a/skills.html
+++ b/skills.html
@@ -99,7 +99,7 @@
         #menuToggle {
           display: block;
           width: 100%;
-          background: #007bff;
+          background: #343a40;
           color: #fff;
           border: none;
           padding: 0.7rem 1.2rem;
@@ -113,13 +113,13 @@
         }
         #menuToggle:active,
         #menuToggle:focus {
-          background: #0056b3;
+          background: #23272f;
         }
         #navMenu {
           display: none;
           flex-direction: column;
           position: absolute;
-          top: 110%;
+          top: 100%;
           left: 0;
           right: 0;
           background: #fff;
@@ -127,9 +127,10 @@
           border-radius: 0.5rem;
           z-index: 1100;
           padding: 0.2rem 0;
-          animation: fadeInMenu 0.22s;
+          animation: fadeInMenu 0.55s;
           max-width: 220px;
           min-width: 140px;
+          min-height: 2.8rem;
         }
         #navMenu.show {
           display: flex;
@@ -146,14 +147,17 @@
           color: #1976d2;
           text-decoration: none;
           font-size: 1.05rem;
-          display: block;
+          display: flex;
+          align-items: center;
           width: 100%;
-          padding: 0.6rem 1rem;
+          height: 2.8rem;
+          padding: 0 1rem;
           transition: color 0.2s, background 0.2s;
           cursor: pointer;
         }
         #navMenu a:hover,
-        #navMenu a:focus {
+        #navMenu a:focus,
+        #navMenu li:active > a {
           background: #e3f2fd;
           color: #1976d2;
         }
@@ -163,17 +167,17 @@
           color: #1976d2;
         }
         @keyframes fadeInMenu {
-          from { opacity: 0; transform: translateY(-10px);}
+          from { opacity: 0; transform: translateY(-16px);}
           to { opacity: 1; transform: translateY(0);}
         }
         @media (prefers-color-scheme: dark) {
           #menuToggle {
-            background: lightgrey;
-            color: #23272f;
+            background: #23272f;
+            color: #e3f2fd;
           }
           #menuToggle:active,
           #menuToggle:focus {
-            background: #b0b0b0;
+            background: #181b20;
           }
           #navMenu {
             background: #23272f;
@@ -186,7 +190,8 @@
             color: #e3f2fd;
           }
           #navMenu a:hover,
-          #navMenu a:focus {
+          #navMenu a:focus,
+          #navMenu li:active > a {
             background: #353a45;
             color: #90caf9;
           }
