--- a/skills.html
+++ b/skills.html
@@ -122,14 +122,15 @@
           top: 100%;
           left: 0;
           right: 0;
+          width: 100%; /* Make dropdown same width as button */
           background: #fff;
           box-shadow: 0 8px 24px rgba(25,118,210,0.13);
           border-radius: 0.5rem;
           z-index: 1100;
           padding: 0.2rem 0;
           animation: fadeInMenu 0.55s;
-          max-width: 220px;
-          min-width: 140px;
+          max-width: none;
+          min-width: 0;
           min-height: 2.8rem;
         }
         #navMenu.show {
@@ -149,11 +150,13 @@
           font-size: 1.05rem;
           display: flex;
           align-items: center;
+          justify-content: center; /* Center text horizontally */
           width: 100%;
           height: 2.8rem;
           padding: 0 1rem;
           transition: color 0.2s, background 0.2s;
           cursor: pointer;
+          text-align: center; /* Center text */
         }
         #navMenu a:hover,
         #navMenu a:focus,
