--- a/skills.html
+++ b/skills.html
@@ -107,6 +107,7 @@
           border-radius: 0.4rem;
           cursor: pointer;
           margin-bottom: 0.5rem;
+          margin-top: 1.2rem; /* Move button lower */
           z-index: 1101;
           transition: background 0.2s;
           box-sizing: border-box;
