--- a/skills.html
+++ b/skills.html
@@ -107,7 +107,7 @@
           border-radius: 0.4rem;
           cursor: pointer;
           margin-bottom: 0.5rem;
-          margin-top: 1.2rem; /* Move button lower */
+          margin-top: 1.2rem;
           z-index: 1101;
           transition: background 0.2s;
           box-sizing: border-box;
@@ -123,7 +123,7 @@
           top: 100%;
           left: 0;
           right: 0;
-          width: 100%; /* Make dropdown same width as button */
+          width: 100%;
           background: #fff;
           box-shadow: 0 8px 24px rgba(25,118,210,0.13);
           border-radius: 0.5rem;
@@ -141,6 +141,9 @@
           margin: 0;
           padding: 0;
           border-bottom: 1px solid #e3f2fd;
+          height: 2.8rem; /* Make li height same as selectable area */
+          display: flex;
+          align-items: stretch;
         }
         #navMenu li:last-child {
           border-bottom: none;
@@ -151,13 +154,13 @@
           font-size: 1.05rem;
           display: flex;
           align-items: center;
-          justify-content: center; /* Center text horizontally */
+          justify-content: center;
           width: 100%;
-          height: 2.8rem;
+          height: 100%; /* Fill li height */
           padding: 0 1rem;
           transition: color 0.2s, background 0.2s;
           cursor: pointer;
-          text-align: center; /* Center text */
+          text-align: center;
         }
         #navMenu a:hover,
         #navMenu a:focus,
@@ -479,6 +482,31 @@
       }
     }
   </style>
+  
+  </section>
+  <footer>
+  <section id="contact" class="contact-section">
+    <h2 class="section-title contact-title">Contact</h2>
+    <p class="contact-item">
+      <img src="https://cdn-icons-png.flaticon.com/24/732/732200.png" alt="Email Icon" width="25" height="25">
+      <strong>Email:</strong> raulrdzr98@gmail.com
+      <a class="contact-link" href="mailto:raulrdzr98@gmail.com?subject=%5BYour%20Company%5D%20Job%20Opportunity&body=Hello%20Ra%C3%BAl%20!%0A%0A%0ARegards,%0A[Your%20Name]">Send me an email</a>
+    </p>
+    <p class="contact-item">
+      <img src="https://cdn-icons-png.flaticon.com/24/174/174857.png" alt="LinkedIn Icon" width="25" height="25">
+      <strong>LinkedIn:</strong> https://www.linkedin.com/in/raulrdz98/
+      <a class="contact-link" href="https://www.linkedin.com/in/raulrdz98/" target="_blank">Visit my LinkedIn</a>
+    </p>
+    <p class="contact-item">
+      <img class="white-icon" src="https://cdn-icons-png.flaticon.com/24/597/597177.png" alt="Phone Icon" width="25" height="25">
+      <strong>Phone:</strong> +52 8114148191
+      <a class="contact-link" href="tel:+528114148191">Call me</a>
+    </p>
+    <p class="contact-item">
+      <img src="https://cdn-icons-png.flaticon.com/128/733/733585.png" alt="WhatsApp Icon" width="25" height="25">
+      <strong>Whatsapp:</strong> +52 8114148191
+       <a class="contact-link" href="https://wa.me/528114148191" target="_blank">Send me a WhatsApp</a>
+    </p>
   
   </section>
   <!-- Back to Top Button -->
