mobile menu update

--- a/skills.html
+++ b/skills.html
@@ -99,7 +99,7 @@
         #menuToggle {
           display: block;
           width: 100%;
-          background: #343a40;
+          background: #007bff; /* Changed to requested blue */
           color: #fff;
           border: none;
           padding: 0.7rem 1.2rem;
@@ -114,7 +114,7 @@
         }
         #menuToggle:active,
         #menuToggle:focus {
-          background: #23272f;
+          background: #0056b3;
         }
         #navMenu {
           display: none;
