--- a/index.html
+++ b/index.html
@@ -457,12 +457,12 @@
   
   </section>
 <!-- Back to Top Button -->
-<a href="#top" class="back-to-top-btn" id="backToTopBtn" aria-label="Back to Top" style="display:none; position:fixed; bottom:32px; right:32px; z-index:1000;">
-    <svg width="50" height="50" viewBox="0 0 28 28" fill="none">
-        <circle cx="14" cy="14" r="13" fill="#fff" stroke="#1976d2" stroke-width="2"/>
-        <polyline points="9,16 14,11 19,16" fill="none" stroke="#1976d2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  <a href="#top" class="back-to-top-btn" id="backToTopBtn" aria-label="Back to Top" style="display:none;">
+    <svg width="48" height="48" viewBox="0 0 28 28" fill="none">
+      <circle class="back-to-top-circle" cx="14" cy="14" r="13" stroke-width="2"/>
+      <polyline class="back-to-top-arrow" points="9,16 14,11 19,16" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
-</a>
+  </a>
 <script>
     // Show/hide back to top button on scroll
     window.addEventListener('scroll', function() {
