--- a/projects.html
+++ b/projects.html
@@ -407,10 +407,10 @@
   
   </section>
   <!-- Back to Top Button -->
-  <a href="#top" class="back-to-top-btn" id="backToTopBtn" aria-label="Back to Top">
-    <svg width="50" height="50" viewBox="0 0 28 28" fill="none">
-      <circle cx="14" cy="14" r="13" fill="#fff" stroke="#1976d2" stroke-width="2"/>
-      <polyline points="9,16 14,11 19,16" fill="none" stroke="#1976d2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  <a href="#top" class="back-to-top-btn" id="backToTopBtn" aria-label="Back to Top" style="display:none;">
+    <svg width="48" height="48" viewBox="0 0 28 28" fill="none">
+      <circle class="back-to-top-circle" cx="14" cy="14" r="13" stroke-width="2"/>
+      <polyline class="back-to-top-arrow" points="9,16 14,11 19,16" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
   </a>
 
